Created a PerformanceLogger to report actual csv data to create visualisations from.